move to h3 index
